--- a/src/main/resources/static/css/comumit.css
+++ b/src/main/resources/static/css/comumit.css
@@ -7,8 +7,18 @@ body {
     margin: 30px;
 }
 
-
 .publish-btn {
     float: right;
     margin-bottom: 15px;
+}
+
+.media-object {
+    width: 38px;
+    height: 38px;
+}
+
+.text-desc {
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
 }
