--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,14 +3,10 @@
 <head>
     <title>仓颉社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-
-    <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
     <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
-
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <link rel="stylesheet" href="/static/css/comumit.css">
     <script src="/static/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -46,5 +42,32 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h2>
+            <hr>
+            <div class="media" th:each="prod : ${question}">
+                <div class="media-left media-middle">
+                    <a href="#">
+                        <img class="media-object img-circle" th:src="${prod.avatar_url}" alt="用户头像">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading" th:text="${prod.title}"></h4>
+                    <span class="text-desc"><span th:text="${prod.comment_count}"></span>个回复 • <span th:text="${prod.view_count}"></span> 次浏览 • <span  th:text="${#dates.format(prod.gmt_create, 'yyyy-MM-dd')}"></span></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-lg-12 col-md-12 col-sm-12 col-xs-12"></div>
+        <h3>热门话题</h3>
+        &问题标题: 请用精简的语言描述您发布的问题，不超过25字<br>
+        &问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料<br>
+        &选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
+
+    </div>
+</div>
+
 </body>
 </html>
