--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -51,10 +51,10 @@
         <div class="col-lg-9 col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 发起</h2>
             <hr>
-            <form action="">
+            <form action="/publish/create" method="post" >
                 <div class="form-group">
                     <label for="title">问题标题 （简单概要）</label>
-                    <input type="text" class="form-control" id="title" placeholder="Email"/>
+                    <input type="text" name="title" class="form-control" id="title" placeholder="Email"/>
                 </div>
                 <div class="form-group">
                     <label for="title">问题补充 （必填，参照右侧提示）</label>
