重新修改登录状态验证

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -32,7 +32,7 @@
             <nav aria-label="Page navigation" th:utext="${question.page}"></nav>
     </div>
         <div class="col-lg-3 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3>我的信息</h3>
+            <h3>What Do You Do</h3>
         </div>
     </div>
 </div>
