--- a/src/main/resources/templates/profile-myinfo.html
+++ b/src/main/resources/templates/profile-myinfo.html
@@ -13,31 +13,27 @@
 </head>
 <body>
 <div th:insert="navlgation :: nav"></div>
-<div class="container-fluid main" >
+<div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp;<span th:text="${title}"></span></h2>
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp;<span th:text="${title}"></span>
+            </h2>
             <hr>
-            <div class="media" th:each="prod : ${question.pageData}">
-                <div class="media-left media-middle">
-                    <a href="#">
-                        <img class="media-object img-circle" th:src="${prod.avatar_url}" alt="用户头像">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading" th:text="${prod.title}"></h4>
-                    <span class="text-desc"><span th:text="${prod.comment_count}"></span>个回复 • <span
-                            th:text="${prod.view_count}"></span> 次浏览 • <span
-                            th:text="${#dates.format(prod.gmt_create, 'yyyy-MM-dd')}"></span></span>
-                </div>
+            <div class="img-content">
+                <img class="img-circle" th:src="${session.user.avatar_url}">
+                <br>
+                <br>
+                <span th:text="${session.user.name}"></span>
+                <br>
+                <b>个人描述：</b><span th:text="${session.user.bio}"></span>
             </div>
-            <nav aria-label="Page navigation" th:utext="${question.page}"></nav>
-    </div>
+
+        </div>
         <div class="col-lg-3 col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3>What Do You Do</h3>
             <div class="list-group">
                 <a id="questions" href="/profile/questions" class="list-group-item">
-                   我的问题
+                    我的问题
                 </a>
                 <a id="myInfo" href="/profile/myInfo" class="list-group-item">个人信息</a>
                 <a href="#" class="list-group-item">Morbi leo risus</a>
