配置了文件上传

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,6 +41,9 @@
             <ul class="list-group img-content">
                 <li class="list-group-item" th:each="q : ${hot_title}"><a th:href="'question?id=' + ${q.id}" th:text="${q.title}"></a></li>
             </ul>
+            <h3>最新回复</h3>
+            <hr>
+
         </div>
         </div>
     </div>
