--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/static/css/comumit.css">
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/wangEditor.min.js"></script>
+    <script src="/static/js/wangEditor.js"></script>
+    <script src="/static/js/eidtRun.js"></script>
 </head>
 <body>
 <div th:insert="navlgation :: nav"></div>
@@ -17,14 +20,14 @@
         <div class="col-lg-9 col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 发起</h2>
             <hr>
-            <form action="/publish/create" method="post" >
+            <form action="/publish/create" method="post">
                 <div class="form-group">
                     <label for="title">问题标题 （简单概要）</label>
-                    <input type="text" name="title" class="form-control" id="title" placeholder="Email"/>
+                    <input type="text" name="title" class="form-control" id="title" placeholder="标题"/>
                 </div>
                 <div class="form-group">
                     <label for="title">问题补充 （必填，参照右侧提示）</label>
-                    <textarea name="description" id="description" cols="30" rows="10" class="form-control"></textarea>
+                    <div id="text-table"></div>
                 </div>
                 <div class="form-group">
                     <label for="tag">问题标签</label>
@@ -34,12 +37,13 @@
             </form>
         </div>
 
-        <div class="col-lg-3 col-lg-12 col-md-12 col-sm-12 col-xs-12"></div>
-        <h3> 问题发起指南</h3>
-        &问题标题: 请用精简的语言描述您发布的问题，不超过25字<br>
-        &问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料<br>
-        &选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
-
+        <div class="col-lg-3 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h3> 问题发起指南</h3>
+            &问题标题: 请用精简的语言描述您发布的问题，不超过25字<br>
+            &问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料<br>
+            &选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
+            &现只支持一次插入单张图片，插入多张图片时会导致只能收到一张图片
+        </div>
     </div>
 </div>
 
