--- a/src/main/resources/templates/question-info.html
+++ b/src/main/resources/templates/question-info.html
@@ -14,9 +14,12 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h2>
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> <span th:text="question.title"></span></h2>
+            作者： |发布时间： |阅读量：
             <hr>
+            <div id="question-view">
 
+            </div>
         </div>
 
         <div class="col-lg-3 col-lg-12 col-md-12 col-sm-12 col-xs-12">
