“重新配置了图片上传接口”

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/static/css/comumit.css">
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/wangEditor.min.js"></script>
     <script src="/static/js/wangEditor.js"></script>
     <script src="/static/js/eidtRun.js"></script>
 </head>
@@ -39,10 +38,10 @@
 
         <div class="col-lg-3 col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3> 问题发起指南</h3>
-            &问题标题: 请用精简的语言描述您发布的问题，不超过25字<br>
-            &问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料<br>
-            &选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
-            &现只支持一次插入单张图片，插入多张图片时会导致只能收到一张图片
+            <b>&</b>问题标题: 请用精简的语言描述您发布的问题，不超过25字<br>
+            <b>&</b>问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料<br>
+            <b>&</b>选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
+            <b>&</b>现只支持一次插入单张图片，插入多张图片时会导致只能收到一张图片
         </div>
     </div>
 </div>
